Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -10,18 +10,21 @@
   <meta property="og:description" content="Luxury BIAB, gel polish, gel extensions, and permanent welded jewellery in Cheadle. Explore services, recent work, FAQs, and booking details.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://elysiumbygeorgierose.co.uk/">
-  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
+  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/optimized/logo/curlogo-192.0876b491.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Elysium By Georgie Rose | Nails and Permanent Jewellery">
   <meta name="twitter:description" content="Luxury BIAB, gel polish, gel extensions, and permanent welded jewellery in Cheadle. Explore services, recent work, FAQs, and booking details.">
-  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
-  <link rel="icon" type="image/png" href="assets/images/curlogo.png">
-  <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
-  <link rel="apple-touch-icon" href="assets/images/curlogo.png">
+  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/optimized/logo/curlogo-192.0876b491.png">
+  <link rel="icon" type="image/png" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
+  <link rel="shortcut icon" type="image/png" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
+  <link rel="apple-touch-icon" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style.css">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap"></noscript>
+  <link rel="preload" as="image" href="assets/images/optimized/hero/pink-french-with-bow-960.89a922b0.jpg" imagesrcset="assets/images/optimized/hero/pink-french-with-bow-640.04546d96.jpg 640w, assets/images/optimized/hero/pink-french-with-bow-960.89a922b0.jpg 960w, assets/images/optimized/hero/pink-french-with-bow-1280.c986aa44.jpg 1280w" imagesizes="(max-width: 480px) 92vw, (max-width: 1024px) 90vw, 1200px">
+  <link rel="stylesheet" href="assets/style.ae87f78b.css">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
@@ -29,7 +32,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" loading="eager" decoding="async" width="50" height="50">
+        <img class="brand-mark" src="assets/images/optimized/logo/curlogo-64.65646c3a.png" alt="Elysium By Georgie Rose" loading="eager" decoding="async" width="50" height="50">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -84,8 +87,11 @@
         </div>
         <div class="hero-visual" aria-hidden="true">
           <div class="hero-collage">
-            <img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" srcset="assets/images/Nails/Pink%20french%20with%20bow.jpg 480w, assets/images/Nails/Pink%20french%20with%20bow.jpg 960w, assets/images/Nails/Pink%20french%20with%20bow.jpg 1440w" sizes="(max-width: 420px) 92vw, (max-width: 760px) 46vw, (max-width: 1080px) 50vw, 32vw" alt="Pink French nails with bow detail" loading="eager" decoding="async" fetchpriority="high" width="900" height="1100">
-            <img src="assets/images/Jewellery/Gold%20permanent%20bracelet.jpg" srcset="assets/images/Jewellery/Gold%20permanent%20bracelet.jpg 480w, assets/images/Jewellery/Gold%20permanent%20bracelet.jpg 960w, assets/images/Jewellery/Gold%20permanent%20bracelet.jpg 1440w" sizes="(max-width: 420px) 92vw, (max-width: 760px) 46vw, (max-width: 1080px) 50vw, 32vw" alt="Gold permanent bracelet close-up" loading="lazy" decoding="async" width="900" height="1100">
+            <picture>
+              <source type="image/jpeg" srcset="assets/images/optimized/hero/pink-french-with-bow-640.04546d96.jpg 640w, assets/images/optimized/hero/pink-french-with-bow-960.89a922b0.jpg 960w, assets/images/optimized/hero/pink-french-with-bow-1280.c986aa44.jpg 1280w" sizes="(max-width: 480px) 92vw, (max-width: 1024px) 90vw, 1200px">
+              <img src="assets/images/optimized/hero/pink-french-with-bow-960.89a922b0.jpg" alt="Pink French nails with bow detail" loading="eager" decoding="async" fetchpriority="high" width="960" height="720">
+            </picture>
+            <img src="assets/images/optimized/hero/gold-permanent-bracelet-960.a63dd779.jpg" alt="Gold permanent bracelet close-up" loading="lazy" decoding="async" fetchpriority="low" width="960" height="720">
           </div>
         </div>
       </div>
@@ -97,7 +103,7 @@
         <p class="section-intro">Two signature service lines, delivered with the same detail-led approach.</p>
         <div class="split-feature">
           <article class="path-card">
-            <img src="assets/images/Nails/Blue%20Extensions.jpg" alt="Blue gel nail extensions" loading="lazy" decoding="async" width="900" height="700">
+            <img src="assets/images/optimized/thumb/blue-extensions-640.ead336dc.jpg" alt="Blue gel nail extensions" loading="lazy" decoding="async" width="900" height="700">
             <h3>Nails</h3>
             <ul>
               <li>BIAB overlays focused on strength and finish</li>
@@ -107,7 +113,7 @@
             <p><a class="btn btn-secondary" href="nails.html">View nail services</a></p>
           </article>
           <article class="path-card">
-            <img src="assets/images/Jewellery/Holding%20hands%20with%20bracelets.jpg" alt="Matching permanent bracelets" loading="lazy" decoding="async" width="900" height="700">
+            <img src="assets/images/optimized/thumb/holding-hands-with-bracelets-640.50a8e93e.jpg" alt="Matching permanent bracelets" loading="lazy" decoding="async" width="900" height="700">
             <h3>Permanent Jewellery</h3>
             <ul>
               <li>Welded bracelets, anklets and rings</li>
@@ -133,7 +139,7 @@
           </ul>
         </article>
         <div>
-          <img class="about-photo" src="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg" alt="Georgie at a wedding fair pop-up setup" loading="lazy" decoding="async" width="900" height="760">
+          <img class="about-photo" src="assets/images/optimized/thumb/wedding-fair-pop-up-with-georgie-in-shot-640.5a3d3932.jpg" alt="Georgie at a wedding fair pop-up setup" loading="lazy" decoding="async" width="900" height="760">
         </div>
       </div>
     </section>
@@ -189,34 +195,34 @@
         -->
         <div class="image-grid" aria-label="Featured work gallery">
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Blue%20Extensions.jpg" data-alt="Nail set - blue extensions">
-            <img src="assets/images/Nails/Blue%20Extensions.jpg" alt="Nail set - blue extensions" loading="lazy" decoding="async" width="900" height="1120">
+            <img src="assets/images/optimized/thumb/blue-extensions-640.ead336dc.jpg" alt="Nail set - blue extensions" loading="lazy" decoding="async" width="900" height="1120">
           </button>
           <button class="image-card" type="button" data-lightbox="assets/images/Jewellery/Blue%20%26%20gold%20Bracelet.jpg" data-alt="Permanent jewellery - bracelet, blue & gold">
-            <img src="assets/images/Jewellery/Blue%20%26%20gold%20Bracelet.jpg" alt="Permanent jewellery - bracelet, blue & gold" loading="lazy" decoding="async" width="900" height="1120">
+            <img src="assets/images/optimized/thumb/blue-gold-bracelet-640.cd1e9460.jpg" alt="Permanent jewellery - bracelet, blue & gold" loading="lazy" decoding="async" width="900" height="1120">
           </button>
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Strawberry%20nails.jpg" data-alt="Nail set - strawberry nails">
-            <img src="assets/images/Nails/Strawberry%20nails.jpg" alt="Nail set - strawberry nails" loading="lazy" decoding="async" width="900" height="1120">
+            <img src="assets/images/optimized/thumb/strawberry-nails-640.40d7a341.jpg" alt="Nail set - strawberry nails" loading="lazy" decoding="async" width="900" height="1120">
           </button>
           <button class="image-card" type="button" data-lightbox="assets/images/Jewellery/Silver%20bracelet%20with%20peaks%20background.jpg" data-alt="Permanent jewellery - bracelet, silver with peaks background">
-            <img src="assets/images/Jewellery/Silver%20bracelet%20with%20peaks%20background.jpg" alt="Permanent jewellery - bracelet, silver with peaks background" loading="lazy" decoding="async" width="900" height="1120">
+            <img src="assets/images/optimized/thumb/silver-bracelet-with-peaks-background-640.1ec4dff7.jpg" alt="Permanent jewellery - bracelet, silver with peaks background" loading="lazy" decoding="async" width="900" height="1120">
           </button>
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pale%20blue%20extensions.jpg" data-alt="Nail set - pale blue extensions">
-            <img src="assets/images/Nails/Pale%20blue%20extensions.jpg" alt="Nail set - pale blue extensions" loading="lazy" decoding="async" width="900" height="1120">
+            <img src="assets/images/optimized/thumb/pale-blue-extensions-640.87fd95e9.jpg" alt="Nail set - pale blue extensions" loading="lazy" decoding="async" width="900" height="1120">
           </button>
           <button class="image-card" type="button" data-lightbox="assets/images/Jewellery/Welding%20bracelet.jpg" data-alt="Permanent jewellery - bracelet, feature detail">
-            <img src="assets/images/Jewellery/Welding%20bracelet.jpg" alt="Permanent jewellery - bracelet, feature detail" loading="lazy" decoding="async" width="900" height="1120">
+            <img src="assets/images/optimized/thumb/welding-bracelet-640.ae0d32e8.jpg" alt="Permanent jewellery - bracelet, feature detail" loading="lazy" decoding="async" width="900" height="1120">
           </button>
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Pink%20nails%20with%20cherry.jpg" data-alt="Nail set - pink nails with cherry">
-            <img src="assets/images/Nails/Pink%20nails%20with%20cherry.jpg" alt="Nail set - pink nails with cherry" loading="lazy" decoding="async" width="900" height="1120">
+            <img src="assets/images/optimized/thumb/pink-nails-with-cherry-640.4946ea9a.jpg" alt="Nail set - pink nails with cherry" loading="lazy" decoding="async" width="900" height="1120">
           </button>
           <button class="image-card" type="button" data-lightbox="assets/images/Jewellery/Gold%20chains%20in%20low%20light.jpg" data-alt="Permanent jewellery - piece, gold chains in low light">
-            <img src="assets/images/Jewellery/Gold%20chains%20in%20low%20light.jpg" alt="Permanent jewellery - piece, gold chains in low light" loading="lazy" decoding="async" width="900" height="1120">
+            <img src="assets/images/optimized/thumb/gold-chains-in-low-light-640.24427414.jpg" alt="Permanent jewellery - piece, gold chains in low light" loading="lazy" decoding="async" width="900" height="1120">
           </button>
           <button class="image-card" type="button" data-lightbox="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" data-alt="Nail set - red nails with snowflake">
-            <img src="assets/images/Nails/Red%20nails%20with%20snowflake.jpg" alt="Nail set - red nails with snowflake" loading="lazy" decoding="async" width="900" height="1120">
+            <img src="assets/images/optimized/thumb/red-nails-with-snowflake-640.5e47e469.jpg" alt="Nail set - red nails with snowflake" loading="lazy" decoding="async" width="900" height="1120">
           </button>
           <button class="image-card" type="button" data-lightbox="assets/images/Jewellery/Urban%20Outfitters%20pop%20up%20set%20up.jpg" data-alt="Permanent jewellery - piece, urban outfitters pop up set up">
-            <img src="assets/images/Jewellery/Urban%20Outfitters%20pop%20up%20set%20up.jpg" alt="Permanent jewellery - piece, urban outfitters pop up set up" loading="lazy" decoding="async" width="900" height="1120">
+            <img src="assets/images/optimized/thumb/urban-outfitters-pop-up-set-up-640.1cd03e94.jpg" alt="Permanent jewellery - piece, urban outfitters pop up set up" loading="lazy" decoding="async" width="900" height="1120">
           </button>
         </div>
       </div>
@@ -265,9 +271,9 @@
               </div>
               <p class="embed-inline-status">Recent studio sets and welded jewellery highlights.</p>
               <div class="social-preview-grid">
-                <img src="assets/images/Nails/Pink%20french%20with%20bow.jpg" alt="Nail set preview from Instagram" loading="lazy" decoding="async" width="320" height="320">
-                <img src="assets/images/Jewellery/Gold%20permanent%20bracelet.jpg" alt="Permanent jewellery bracelet preview from Instagram" loading="lazy" decoding="async" width="320" height="320">
-                <img src="assets/images/Nails/Blue%20Extensions.jpg" alt="Nail extension preview from Instagram" loading="lazy" decoding="async" width="320" height="320">
+                <img src="assets/images/optimized/thumb/pink-french-with-bow-640.3e291995.jpg" alt="Nail set preview from Instagram" loading="lazy" decoding="async" width="320" height="320">
+                <img src="assets/images/optimized/thumb/gold-permanent-bracelet-640.40c8bce8.jpg" alt="Permanent jewellery bracelet preview from Instagram" loading="lazy" decoding="async" width="320" height="320">
+                <img src="assets/images/optimized/thumb/blue-extensions-640.ead336dc.jpg" alt="Nail extension preview from Instagram" loading="lazy" decoding="async" width="320" height="320">
               </div>
               <div class="embed-actions">
                 <a class="btn btn-secondary" data-social-link="instagram" href="https://www.instagram.com/elysium_by_georgierose/">View on Instagram</a>
@@ -293,9 +299,9 @@
               </div>
               <p class="embed-inline-status">Behind-the-scenes clips, pop-up setup, and event snapshots.</p>
               <div class="social-preview-grid">
-                <img src="assets/images/Jewellery/Urban%20Outfitters%20pop%20up%20set%20up.jpg" alt="Pop-up setup preview from TikTok" loading="lazy" decoding="async" width="320" height="320">
-                <img src="assets/images/Jewellery/Wedding%20fair%20pop%20up%20with%20georgie%20in%20shot.jpg" alt="Wedding fair preview from TikTok" loading="lazy" decoding="async" width="320" height="320">
-                <img src="assets/images/Jewellery/Pop%20up%20staffs.jpg" alt="Event day preview from TikTok" loading="lazy" decoding="async" width="320" height="320">
+                <img src="assets/images/optimized/thumb/urban-outfitters-pop-up-set-up-640.1cd03e94.jpg" alt="Pop-up setup preview from TikTok" loading="lazy" decoding="async" width="320" height="320">
+                <img src="assets/images/optimized/thumb/wedding-fair-pop-up-with-georgie-in-shot-640.5a3d3932.jpg" alt="Wedding fair preview from TikTok" loading="lazy" decoding="async" width="320" height="320">
+                <img src="assets/images/optimized/thumb/pop-up-staffs-640.72a355d6.jpg" alt="Event day preview from TikTok" loading="lazy" decoding="async" width="320" height="320">
               </div>
               <div class="embed-actions">
                 <a class="btn btn-secondary" data-social-link="tiktok" href="https://www.tiktok.com/@elysium_by_georgierose?is_from_webapp=1&amp;sender_device=pc">View on TikTok</a>
@@ -441,7 +447,8 @@
     </div>
   </footer>
 
-  <script src="assets/site-config.js" defer></script>
-  <script src="assets/main.js" defer></script>
+  <script src="assets/site-config.2d266e56.js" defer></script>
+  <script src="assets/main.68865a81.js" defer></script>
 </body>
 </html>
+
