--- a/nails.html
+++ b/nails.html
@@ -10,18 +10,20 @@
   <meta property="og:description" content="Book BIAB, gel polish, and gel extensions with Elysium By Georgie Rose. View aftercare guidance, recent nail sets, timings, and booking options.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://elysiumbygeorgierose.co.uk/nails.html">
-  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
+  <meta property="og:image" content="https://elysiumbygeorgierose.co.uk/assets/images/optimized/logo/curlogo-192.0876b491.png">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Nails | Elysium By Georgie Rose">
   <meta name="twitter:description" content="Book BIAB, gel polish, and gel extensions with Elysium By Georgie Rose. View aftercare guidance, recent nail sets, timings, and booking options.">
-  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/curlogo.png">
-  <link rel="icon" type="image/png" href="assets/images/curlogo.png">
-  <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
-  <link rel="apple-touch-icon" href="assets/images/curlogo.png">
+  <meta name="twitter:image" content="https://elysiumbygeorgierose.co.uk/assets/images/optimized/logo/curlogo-192.0876b491.png">
+  <link rel="icon" type="image/png" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
+  <link rel="shortcut icon" type="image/png" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
+  <link rel="apple-touch-icon" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style.css">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap"></noscript>
+  <link rel="stylesheet" href="assets/style.ae87f78b.css">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
@@ -29,7 +31,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" loading="eager" decoding="async" width="50" height="50">
+        <img class="brand-mark" src="assets/images/optimized/logo/curlogo-64.65646c3a.png" alt="Elysium By Georgie Rose" loading="eager" decoding="async" width="50" height="50">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -309,7 +311,8 @@
     </div>
   </footer>
 
-  <script src="assets/site-config.js" defer></script>
-  <script src="assets/main.js" defer></script>
+  <script src="assets/site-config.2d266e56.js" defer></script>
+  <script src="assets/main.68865a81.js" defer></script>
 </body>
 </html>
+
