--- a/services.html
+++ b/services.html
@@ -10,13 +10,15 @@
   <meta property="og:description" content="Explore BIAB, gel services, and permanent jewellery options.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/images/Jewellery/Blue%20%26%20gold%20Bracelet.jpg">
-  <link rel="icon" type="image/png" href="assets/images/curlogo.png">
-  <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
-  <link rel="apple-touch-icon" href="assets/images/curlogo.png">
+  <link rel="icon" type="image/png" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
+  <link rel="shortcut icon" type="image/png" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
+  <link rel="apple-touch-icon" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style.css">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap"></noscript>
+  <link rel="stylesheet" href="assets/style.ae87f78b.css">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
@@ -24,7 +26,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" width="50" height="50">
+        <img class="brand-mark" src="assets/images/optimized/logo/curlogo-64.65646c3a.png" alt="Elysium By Georgie Rose" width="50" height="50" loading="eager" decoding="async">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -132,10 +134,11 @@
     </div>
   </footer>
 
-  <script src="assets/site-config.js" defer></script>
-  <script src="assets/main.js" defer></script>
+  <script src="assets/site-config.2d266e56.js" defer></script>
+  <script src="assets/main.68865a81.js" defer></script>
 </body>
 </html>
+
 
 
 
