--- a/popups.html
+++ b/popups.html
@@ -10,13 +10,15 @@
   <meta property="og:description" content="Bring a premium permanent jewellery experience to your venue or event.">
   <meta property="og:type" content="website">
   <meta property="og:image" content="assets/images/Jewellery/Urban%20Outfitters%20pop%20up%20set%20up.jpg">
-  <link rel="icon" type="image/png" href="assets/images/curlogo.png">
-  <link rel="shortcut icon" type="image/png" href="assets/images/curlogo.png">
-  <link rel="apple-touch-icon" href="assets/images/curlogo.png">
+  <link rel="icon" type="image/png" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
+  <link rel="shortcut icon" type="image/png" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
+  <link rel="apple-touch-icon" href="assets/images/optimized/logo/curlogo-192.0876b491.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="assets/style.css">
+    <link rel="preload" as="style" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap" media="print" onload="this.media='all'">
+  <noscript><link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Fraunces:opsz,wght@9..144,400;9..144,600;9..144,700&family=Manrope:wght@400;500;600;700&display=swap"></noscript>
+  <link rel="stylesheet" href="assets/style.ae87f78b.css">
 </head>
 <body>
   <a class="skip-link" href="#main-content">Skip to content</a>
@@ -24,7 +26,7 @@
   <header class="site-header">
     <div class="container header-inner">
       <a class="brand" href="index.html">
-        <img class="brand-mark" src="assets/images/curlogo.png" alt="Elysium By Georgie Rose" width="50" height="50">
+        <img class="brand-mark" src="assets/images/optimized/logo/curlogo-64.65646c3a.png" alt="Elysium By Georgie Rose" width="50" height="50" loading="eager" decoding="async">
         <span class="brand-text">
           <span class="brand-name" data-brand-name>Elysium By Georgie Rose</span>
           <span class="brand-tagline">Nails and Permanent Jewellery</span>
@@ -72,8 +74,8 @@
         </div>
         <div class="hero-visual" aria-hidden="true">
           <div class="hero-collage">
-            <img src="assets/images/Jewellery/Urban%20Outfitters%20pop%20up%20set%20up.jpg" alt="Urban Outfitters event setup" width="900" height="1100">
-            <img src="assets/images/Jewellery/Pop%20up%20womens%20day.jpg" alt="Women's day event" width="900" height="1100">
+            <img src="assets/images/Jewellery/Urban%20Outfitters%20pop%20up%20set%20up.jpg" alt="Urban Outfitters event setup" width="900" height="1100" loading="lazy" decoding="async">
+            <img src="assets/images/Jewellery/Pop%20up%20womens%20day.jpg" alt="Women's day event" width="900" height="1100" loading="lazy" decoding="async">
           </div>
         </div>
       </div>
@@ -141,10 +143,11 @@
     </div>
   </footer>
 
-  <script src="assets/site-config.js" defer></script>
-  <script src="assets/main.js" defer></script>
+  <script src="assets/site-config.2d266e56.js" defer></script>
+  <script src="assets/main.68865a81.js" defer></script>
 </body>
 </html>
+
 
 
 
